--- a/.env
+++ b/.env
@@ -2,4 +2,6 @@ PORT= 80
 API_URL= "/api/v1"
 DB_Name="ladycareyear012024"
 DB_USER="sa"
-DB_PASSWORD="123456"
+DB_SERVER='158.220.90.76'
+DB_PASSWORD="123456aA@"
+secret = Reservation
